objects/Fogbridge_comments__c.object
<CustomObject>
    <fields>
        <fullName>CommentBody__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Created_by_user__c</fullName>
        <label>Created by user</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FogBugz_Case_ID__c</fullName>
        <formula>Site_IssueId__r.FogBugz_Case_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FogBugz Case ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fogbridge_sObject_TestId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fogbridge sObject TestId</label>
        <referenceTo>Fogbridge1way__Fogbridge_sobject_test__c</referenceTo>
        <relationshipLabel>Fogbridge_sObject_Test</relationshipLabel>
        <relationshipName>Fogbridge_comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_IssueId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site_Issue</label>
        <referenceTo>Site_Issue__c</referenceTo>
        <relationshipLabel>Fogbugz Comments</relationshipLabel>
        <relationshipName>Fogbridge_comments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Fogbridge_comments</label>
    <nameField>
        <label>Fogbridge_comments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fogbridge_comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>